--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt,hidelinks]{memoir}
 
-% \includeonly{deriving-matching}
+\includeonly{the-basic-idea}
 
 \usepackage{fenna-files/packages}
 \addbibresource{fenna-files/references.bib}
