unrestricted on paper
fix last two trees
add why german/polish don't work

--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -1,6 +1,6 @@
 x% !TEX root = thesis.tex
 
-\chapter{Discussing the unrestricted type}\label{ch:discussing-unrestricted}
+\chapter{Discussing the unrestricted type}\label{ch:deriving-unrestricted}
 
 Languages of the unrestricted type can be summarizes as in Table \ref{tbl:rel-lh-ohg}.
 
